Navbar was overlapping other components. Fixed it

--- a/src/components/css/feed.css
+++ b/src/components/css/feed.css
@@ -9,8 +9,8 @@
 
 .nav-avatar {
     border-radius: 100%;
-    width: 32px;
-    height: 32px;
+    width: 40px;
+    height: 40px;
     align-self: center;
     border: 1px solid black;
     
